Refactor AutomationController: Improved logging structure, added utility methods for better process tracking and error handling. AI Improvement (fallback) Refactor CheckpointManager: Improved code with checkpoint file deletion, enhanced logging, and added utility methods for debugging. AI Improvement (fallback) AI Improvement (fallback)